# Doublet_Quantifier

./: .gitignore  CITATION  CITATION.cff  Example fitting Potassium Doublets.ipynb  README.md  curvefit.py  example_spectra  pyproject.toml
.github/workflows/: Continuous-Integration.yml  ci.yml  sphinx.yml
Doublet_Quantifier/: curvefit.py  models.py
Doublet_Quantifiers/: continuum.py  curvefit.py
docs/source/: conf.py  continuum.rst  curvefit.rst  index.rst  models.rst
examples/: Example fitting Potassium Doublets.ipynb  SXD_spectra.csv
tests/: test_models.py
