[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doublet-quantifier"
version = "0.0.1"
description = 'This code is tool a to quantify these doublet absorption lines, fitting two absorptions simultaneously, and provide parameters for exploring'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "AJB2307", email = "alexandrajbaldelli@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pickle"
]

[project.urls]
Documentation = "https://github.com/AJB2307/doublet-quantifier#readme"
Issues = "https://github.com/AJB2307/doublet-quantifier/issues"
Source = "https://github.com/AJB2307/doublet-quantifier"


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/doublet_quantifier tests}"

[tool.coverage.run]
source_pkgs = ["doublet_quantifier", "tests"]
branch = true
parallel = true
omit = [
  "src/doublet_quantifier/__about__.py",
]

[tool.coverage.paths]
doublet_quantifier = ["src/doublet_quantifier", "*/doublet-quantifier/src/doublet_quantifier"]
tests = ["tests", "*/doublet-quantifier/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

